# aws-french-podcast

./: .gitignore  Gemfile  Makefile  README.md  _config.yml  amplify.yml  aws_categories.txt  buildspec.yaml  customHttp.yml  delete_episode.sh  index.html  kiro-prompt-wn.md  package-lock.json  package.json  postcss.config.js  pr-diff.txt  toucan.yml  upload_episode.sh  webpack.config.js
scripts/bulk-transcribe/: .gitignore  BULK_TRANSCRIBE_README.md  bulk-transcribe.py  pyproject.toml
scripts/podcast-search-mcp-server/: .env.example  .gitignore  Dockerfile  QUICK_START.md  README.md  UV_INTEGRATION.md  podcast_search_server.py  pyproject.toml  requirements.txt  verify_e2e.py
scripts/podcast-search-mcp-server/src/: __init__.py  config.py  server.py
scripts/podcast-search-mcp-server/src/aws/: __init__.py  client_manager.py
scripts/podcast-search-mcp-server/src/models/: __init__.py  episode.py  search_result.py
scripts/podcast-search-mcp-server/src/rss/: __init__.py  feed_manager.py  parser.py
scripts/podcast-search-mcp-server/src/search/: __init__.py  router.py  semantic.py
scripts/podcast-search-mcp-server/tests/: __init__.py  test_aws_client_manager.py  test_date_range_search_properties.py  test_e2e_complete.py  test_episode_id_search_properties.py  test_episode_properties.py  test_guest_search_properties.py  test_http_integration.py  test_query_routing_properties.py  test_response_format_properties.py  test_rss_feed_properties.py  test_semantic_search.py  test_semantic_search_properties.py  test_server_initialization.py  test_stdio_integration.py
(+1173 files in other folders)
